beautify + css table media

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,7 +1,6 @@
 .cadreLogin {
     margin-top: 50px;
 }
-
 .cadreLogin .form-login {
     background-color: #EDEDED;
     padding-top: 10px;
@@ -9,26 +8,22 @@
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 15px;
-    border-color:#d2d2d2;
+    border-color: #d2d2d2;
     border-width: 5px;
-    box-shadow:0 1px 0 #cfcfcf;
+    box-shadow: 0 1px 0 #cfcfcf;
 }
-
 h4 {
- border:0 solid #fff;
- border-bottom-width:1px;
- padding-bottom:10px;
- text-align: center;
+    border: 0 solid #fff;
+    border-bottom-width: 1px;
+    padding-bottom: 10px;
+    text-align: center;
 }
-
 .cadre .form-control {
     border-radius: 10px;
 }
-
 .cadreLogin .wrapper {
     text-align: center;
 }
-
-#tableAdherent td {
+#tableAdherent td, #mediaTable td {
     cursor: pointer;
 }
